--- a/week22-JS/Task2/package.json
+++ b/week22-JS/Task2/package.json
@@ -9,6 +9,7 @@
   "author": "VL",
   "license": "ISC",
   "dependencies": {
+    "animejs": "^3.2.1",
     "chart.js": "^3.6.0",
     "moment": "^2.29.1"
   }
